--- a/introduccin_a_la_tabla_peridica.html
+++ b/introduccin_a_la_tabla_peridica.html
@@ -60,11 +60,10 @@
 </div>
 </div>
 </article>
-<article class="iDevice_wrapper textIdevice" id="id112">
+<article class="iDevice_wrapper textIdevice" id="id115">
 <div class="iDevice emphasis0" >
-<div id="ta112_134_2" class="block iDevice_content">
-<div class="exe-text"><p><video width="691" height="691" style="display: block; margin-left: auto; margin-right: auto;" controls="controls">
-<source src="TablaPeriodia.mp4" type="video/mp4" /></video></p></div>
+<div id="ta115_128_2" class="block iDevice_content">
+<div class="exe-text"><p style="text-align: center;"><iframe width="560" height="315" src="https://www.youtube.com/embed/_IcfjicY_YI?si=Hdrkyisakti1AxSX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen="allowfullscreen"></iframe></p></div>
 </div>
 </div>
 </article>
