--- a/recursos_complementarios.html
+++ b/recursos_complementarios.html
@@ -80,11 +80,10 @@
 </div>
 </div>
 </article>
-<article class="iDevice_wrapper textIdevice" id="id113">
+<article class="iDevice_wrapper textIdevice" id="id114">
 <div class="iDevice emphasis0" >
-<div id="ta113_135_2" class="block iDevice_content">
-<div class="exe-text"><p><video width="682" height="682" style="display: block; margin-left: auto; margin-right: auto;" controls="controls">
-<source src="TABLA_PERIODICA.mp4" type="video/mp4" /></video></p></div>
+<div id="ta114_127_2" class="block iDevice_content">
+<div class="exe-text"><p style="text-align: center;"><iframe width="560" height="315" src="https://www.youtube.com/embed/XO13dOI9Ds8?si=XeVy5rhaGQkhML8w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen="allowfullscreen"></iframe></p></div>
 </div>
 </div>
 </article>
